Update to linting config and corrections to yaml file violations (#112)
* Updating lint/test job to always test templates and also making corrections as needed to bring yaml into compliance

* correcting lint errors in ci test values

* updated changelog with bugfix for kube 1.19 ingress

Signed-off-by: Ken Haines <khaines@microsoft.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1,5 +1,5 @@
-## Container image settings.
-## Since the image is unique for all microservices, so are image settings.
+#  Container image settings.
+#  Since the image is unique for all microservices, so are image settings.
 
 image:
   repository: quay.io/cortexproject/cortex
@@ -13,7 +13,7 @@ image:
   # pullSecrets:
   #   - myRegistrKeySecretName
 
-## Kubernetes cluster DNS domain
+# Kubernetes cluster DNS domain
 clusterDomain: cluster.local
 
 tags:
@@ -91,15 +91,15 @@ config:
   storage:
     engine: chunks
     cassandra:
-      addresses: # configure cassandra addresses here.
-      keyspace: cortex # configure desired keyspace here.
+      addresses:                  # configure cassandra addresses here.
+      keyspace: cortex            # configure desired keyspace here.
       auth: true
-      username: # configure cassandra user here.
-      password: # configure cassandra password here.
+      username:                   # configure cassandra user here.
+      password:                   # configure cassandra password here.
     azure:
-      container_name: # configure azure blob container name here.
-      account_name: # configure azure storage account name here.
-      account_key: # configure azure storage account key here.
+      container_name:             # configure azure blob container name here.
+      account_name:               # configure azure storage account name here.
+      account_key:                # configure azure storage account key here.
     # aws:
     #   dynamodb:
     #     dynamodb_url:
@@ -162,7 +162,7 @@ config:
   alertmanager:
     external_url: '/api/prom/alertmanager'
   frontend:
-    #max_outstanding_per_tenant: 1000
+    #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
     compress_responses: true
 
@@ -186,13 +186,13 @@ alertmanager:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 200m
-      memory: 256Mi
-    requests:
-      cpu: 10m
-      memory: 32Mi
+  resources: {}
+  #  limits:
+  #    cpu: 200m
+  #    memory: 256Mi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 32Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -264,10 +264,10 @@ alertmanager:
 
   securityContext:
     {}
-    #fsGroup: 10001
-    #runAsGroup: 10001
-    #runAsNonRoot: true
-    #runAsUser: 10001
+    # fsGroup: 10001
+    # runAsGroup: 10001
+    # runAsNonRoot: true
+    # runAsUser: 10001
 
   ## Tolerations for pod assignment
   ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
@@ -340,13 +340,13 @@ distributor:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 100m
-      memory: 512Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 512Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -425,18 +425,18 @@ ingester:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 100m
-      memory: 512Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 512Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
     {}
-    # log.level: debug
+    #  log.level: debug
 
   ## Pod Labels
   podLabels: {}
@@ -503,7 +503,7 @@ ingester:
     # storageClass: "-"
 
   livenessProbe:
-    failureThreshold: 20 # 10 minutes failure threshold
+    failureThreshold: 20      # 10 minutes failure threshold
     httpGet:
       path: /ready
       port: http-metrics
@@ -549,13 +549,13 @@ ruler:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 200m
-      memory: 256Mi
-    requests:
-      cpu: 10m
-      memory: 32Mi
+  resources: {}
+  #  limits:
+  #    cpu: 200m
+  #    memory: 256Mi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 32Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -616,13 +616,13 @@ querier:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 50m
-      memory: 128Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 50m
+  #    memory: 128Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -695,13 +695,13 @@ query_frontend:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 256Mi
-    requests:
-      cpu: 10m
-      memory: 32Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 256Mi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 32Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -774,13 +774,13 @@ table_manager:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 10m
-      memory: 32Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 32Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -841,13 +841,13 @@ configs:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 10m
-      memory: 32Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 32Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -916,13 +916,13 @@ nginx:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 100m
-      memory: 128Mi
-    requests:
-      cpu: 10m
-      memory: 16Mi
+  resources: {}
+  #  limits:
+  #    cpu: 100m
+  #    memory: 128Mi
+  #  requests:
+  #    cpu: 10m
+  #    memory: 16Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
@@ -983,18 +983,18 @@ store_gateway:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 100m
-      memory: 512Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 512Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
     {}
-    # log.level: debug
+  # log.level: debug
 
   ## Pod Labels
   podLabels: {}
@@ -1056,7 +1056,7 @@ store_gateway:
     # storageClass: "-"
 
   livenessProbe:
-    failureThreshold: 20 # 10 minutes failure threshold
+    failureThreshold: 20      # 10 minutes failure threshold
     httpGet:
       path: /ready
       port: http-metrics
@@ -1098,18 +1098,18 @@ compactor:
   serviceMonitor:
     enabled: false
 
-  resources:
-    limits:
-      cpu: 1
-      memory: 1Gi
-    requests:
-      cpu: 100m
-      memory: 512Mi
+  resources: {}
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 512Mi
 
   ## Additional Cortex container arguments, e.g. log level (debug, info, warn, error)
   extraArgs:
     {}
-    # log.level: debug
+    #  log.level: debug
 
   ## Pod Labels
   podLabels: {}
@@ -1171,7 +1171,7 @@ compactor:
     # storageClass: "-"
 
   livenessProbe:
-    failureThreshold: 20 # 10 minutes failure threshold
+    failureThreshold: 20      # 10 minutes failure threshold
     httpGet:
       path: /ready
       port: http-metrics
@@ -1212,21 +1212,21 @@ memcached:
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
-  #tolerations: {}
+  # tolerations: {}
   # - key: "dedicated"
   #   operator: "Equal"
   #   value: "cortex-memcached"
   #   effect: "NoSchedule"
-  #affinity: {}
+  # affinity: {}
   #   nodeAffinity:
   #     requiredDuringSchedulingIgnoredDuringExecution:
   #         nodeSelectorTerms:
@@ -1240,28 +1240,28 @@ memcached:
 memcached-index-read:
   enabled: false
   replicaCount: 2
-  #pdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # pdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
-  #tolerations: []
+  # tolerations: []
   # - key: "dedicated"
   #   operator: "Equal"
   #   value: "cortex-memcached"
   #   effect: "NoSchedule"
-  #affinity: {}
+  # affinity: {}
   #   nodeAffinity:
   #     requiredDuringSchedulingIgnoredDuringExecution:
   #         nodeSelectorTerms:
@@ -1275,23 +1275,23 @@ memcached-index-read:
 memcached-index-write:
   enabled: false
   replicaCount: 2
-  #dpdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # dpdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
-  #tolerations: []
+  # tolerations: []
   # - key: "dedicated"
   #   operator: "Equal"
   #   value: "cortex-memcached"
@@ -1309,80 +1309,80 @@ memcached-index-write:
 memcached-frontend:
   enabled: false
   replicaCount: 2
-  #dpdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # dpdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
 
 memcached-blocks-index:
   # enabled/disabled via the tags.blocks-storage-memcached boolean
   replicaCount: 2
-  #dpdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # dpdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
 
 memcached-blocks:
   # enabled/disabled via the tags.blocks-storage-memcached boolean
   replicaCount: 2
-  #dpdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # dpdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
 
 memcached-blocks-metadata:
   # enabled/disabled via the tags.blocks-storage-memcached boolean
   replicaCount: 2
-  #dpdbMinAvailable: 1
-  #image: memcached:1.5.7-alpine
+  # dpdbMinAvailable: 1
+  # image: memcached:1.5.7-alpine
   memcached:
     maxItemMemory: 3840
     extraArgs:
       - -I 32m
     threads: 32
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 10m
-    limits:
-      memory: 4Gi
-      cpu: 1
+  resources: {}
+  #  requests:
+  #    memory: 1Gi
+  #    cpu: 10m
+  #  limits:
+  #    memory: 4Gi
+  #    cpu: 1
   metrics:
     enabled: true
 
