--- a/ct.yaml
+++ b/ct.yaml
@@ -5,4 +5,5 @@ charts:
   - "./"
 chart-repos:
   - base-charts=https://charts.helm.sh/stable
+  - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 600s
