set custom headers
Signed-off-by: Kevin Labesse <kevin@labesse.me>

--- a/values.yaml
+++ b/values.yaml
@@ -975,6 +975,10 @@ nginx:
   extraPorts: []
   env: []
 
+  reverseProxy:
+    setHeaders: {}
+      # X-Scope-OrgID: 0
+
 store_gateway:
   replicas: 1
 
