--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -20,7 +20,6 @@ data:
       worker_connections  4096;  ## Default: 1024
     }
 
-
     http {
       default_type application/octet-stream;
       log_format   main '$remote_addr - $remote_user [$time_local]  $status '
@@ -39,7 +38,15 @@ data:
         proxy_read_timeout 300s;
         proxy_http_version 1.1;
 
+        {{- if .Values.nginx.config.basicAuth.enabled }}
+        auth_basic "Cortex";
+        auth_basic_user_file {{ .Values.nginx.config.basicAuth.htpasswdPath }}
+        {{- end }}
+
         location = /healthz {
+          {{- if .Values.nginx.config.basicAuth.enabled }}
+          auth_basic off; # disable for kubernetes health check
+          {{- end }}
           return 200 'alive';
         }
 
