--- a/templates/nginx-svc.yaml
+++ b/templates/nginx-svc.yaml
@@ -15,7 +15,7 @@ metadata:
   annotations:
     {{- toYaml .Values.nginx.annotations | nindent 4 }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.nginx.service.type }}
   ports:
     - port: {{ .Values.nginx.http_listen_port }}
       protocol: TCP
