--- a/templates/query-frontend-dep.yaml
+++ b/templates/query-frontend-dep.yaml
@@ -59,6 +59,7 @@ spec:
           args:
             - "-target=query-frontend"
             - "-config.file=/etc/cortex/cortex.yaml"
+            {{- include "cortex.memcached" . | nindent 12 }}
           {{- range $key, $value := .Values.query_frontend.extraArgs }}
             - "-{{ $key }}={{ $value }}"
           {{- end }}
