--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -3,7 +3,7 @@ name: Lint and Test Charts
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 
 jobs:
@@ -35,10 +35,17 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch master)
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
       - name: Create kind cluster
         uses: helm/kind-action@v1.1.0
+        if: steps.list-changed.outputs.changed == 'true'
 
       - name: Run chart-testing (install)
-        run: |
-          kubectl create namespace cortex
-          ct install --config ct.yaml --namespace cortex
+        run: ct install --config ct.yaml
