--- a/ct.yaml
+++ b/ct.yaml
@@ -4,6 +4,6 @@ validate-maintainers: false  # ct requires the maintainers to be a github name, 
 charts:
   - "./"
 chart-repos:
-  - base-charts=https://charts.helm.sh/stable
+  - hashicorp=https://helm.releases.hashicorp.com
   - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 600s
