--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -23,6 +23,7 @@ data:
 
     http {
       default_type application/octet-stream;
+      client_max_body_size {{.Values.nginx.config.client_max_body_size}};
       log_format   main '$remote_addr - $remote_user [$time_local]  $status '
         '"$request" $body_bytes_sent "$http_referer" '
         '"$http_user_agent" "$http_x_forwarded_for" $http_x_scope_orgid';
