--- a/values.yaml
+++ b/values.yaml
@@ -904,6 +904,8 @@ nginx:
   http_listen_port: 80
   config:
     dnsResolver: kube-dns.kube-system.svc.cluster.local
+    ## ref: http://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
+    client_max_body_size: 1M
   image:
     repository: nginx
     tag: 1.17
