--- a/ci/stateful-values.yaml
+++ b/ci/stateful-values.yaml
@@ -1,5 +1,5 @@
 ingress:
-  enabled: true
+  enabled: false
 
 config:
   ingester:
@@ -42,7 +42,7 @@ config:
 
   memberlist:
     join_members:
-    - "cortex-ingester-headless.cortex-green"
+    - "cortex-ingester-headless"
 
 ingester:
   replicas: 1
