--- a/templates/compactor/compactor-statefulset.yaml
+++ b/templates/compactor/compactor-statefulset.yaml
@@ -12,7 +12,7 @@ spec:
     matchLabels: {{ include "cortex-compactor.matchLabels" . | nindent 6 }}
   updateStrategy:
     {{- toYaml .Values.compactor.strategy | nindent 4 }}            
-  serviceName: {{ template "cortex.fullname" . }}-compactor
+  serviceName: {{ template "cortex-compactor.headlessname" . }}
   {{- if .Values.compactor.persistentVolume.enabled }}
   volumeClaimTemplates:
     - metadata:
