--- a/templates/compactor/compactor-svc-headless.yaml
+++ b/templates/compactor/compactor-svc-headless.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex-compactor.fullname" . }}
+  name: {{ template "cortex-compactor.headlessname" . }}
   labels: {{ include "cortex-compactor.labels" . | nindent 4 }}
     {{- with .Values.compactor.service.labels }}
 {{- toYaml . | indent 4 }}
@@ -11,6 +11,7 @@ metadata:
     {{- toYaml .Values.compactor.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
+  clusterIP: None
   ports:
     - port: {{ .Values.config.server.http_listen_port }}
       protocol: TCP
