--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -7,14 +7,24 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Publish Helm chart
-        uses: stefanprodan/helm-gh-pages@master
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.4.0
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.0
+        with:
           charts_dir: ..
-          charts_url: https://neticdk.github.io/cortex-helm-chart
-          owner: neticdk
-          repository: cortex-helm-chart
-          branch: gh-pages
-          linting: off
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
