nginx: possibility to setup custom header from the values (#127)
* updating default image tag for cortex (#111)

Signed-off-by: Ken Haines <khaines@microsoft.com>
Signed-off-by: Kevin Labesse <kevin@labesse.me>

* Update to linting config and corrections to yaml file violations (#112)

* Updating lint/test job to always test templates and also making corrections as needed to bring yaml into compliance

* correcting lint errors in ci test values

* updated changelog with bugfix for kube 1.19 ingress

Signed-off-by: Ken Haines <khaines@microsoft.com>
Signed-off-by: Kevin Labesse <kevin@labesse.me>

* issue #124: switch memcached chart to bitnami (#125)

Signed-off-by: cabrinha <scott@internaught.io>
Signed-off-by: Kevin Labesse <kevin@labesse.me>

* Updating CHANGELOG and Chart.yaml for version 0.4.0 release (#132)

* Updating CHANGELOG and Chart.yaml for version 0.4.0 release

Signed-off-by: Ken Haines <khaines@microsoft.com>
Signed-off-by: Kevin Labesse <kevin@labesse.me>

* fix memcache config (#134)

Signed-off-by: Kevin Labesse <kevin@labesse.me>

* set custom headers

Signed-off-by: Kevin Labesse <kevin@labesse.me>

* move to config key

Signed-off-by: Kevin Labesse <kevin@labesse.me>

* update CHANGELOG

Signed-off-by: Kevin Labesse <kevin@labesse.me>

* set custom headers

Signed-off-by: Kevin Labesse <kevin@labesse.me>

* move to config key

Signed-off-by: Kevin Labesse <kevin@labesse.me>

Co-authored-by: Ken Haines <khaines@microsoft.com>
Co-authored-by: Scott Cabrinha <scott@internaught.io>

--- a/values.yaml
+++ b/values.yaml
@@ -904,6 +904,8 @@ nginx:
   http_listen_port: 80
   config:
     dnsResolver: kube-dns.kube-system.svc.cluster.local
+    setHeaders: {}
+      # X-Scope-OrgID: 0
   image:
     repository: nginx
     tag: 1.17
