--- a/templates/ruler-servicemonitor.yaml
+++ b/templates/ruler-servicemonitor.yaml
@@ -31,4 +31,8 @@ spec:
     {{- if .Values.ruler.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.ruler.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    {{- if .Values.ruler.serviceMonitor.relabelings }}
+    relabelings:
+{{ toYaml .Values.ruler.serviceMonitor.relabelings | indent 6 }}
+    {{- end }}
 {{- end }}
