Upgrade memcached and add sa token mount value
* Upgrades memcached helm chart from 5.5.1 to 5.13.0 which adds support
  for specifying service account association and creation
* Adds service account value for whether to automount the token

Signed-off-by: Ryan Probus <ryan.probus@appian.com>

--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -7,4 +7,5 @@ metadata:
     {{- include "cortex.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end }}
