Adjust default config values for Cortex 1.9
Signed-off-by: Niklas Wagner <Skaro@Skaronator.com>

--- a/values.yaml
+++ b/values.yaml
@@ -46,6 +46,7 @@ config:
   auth_enabled: false
   api:
     prometheus_http_prefix: '/prometheus'
+    response_compression_enabled: true
   ingester:
     max_transfer_retries: 0
     lifecycler:
@@ -126,7 +127,6 @@ config:
       memcached_client:
         timeout: 1s
   chunk_store:
-    max_look_back_period: 0s
     chunk_cache_config:
       memcached:
         expiration: 1h
@@ -164,7 +164,6 @@ config:
   frontend:
     #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
-    compress_responses: true
 
 rbac:
   create: true
