Add tenant overrides config
Signed-off-by: puneeth.s <puneeth94@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1406,3 +1406,10 @@ configsdb_postgresql:
     existing_secret:
       name:
       key:
+
+# Add tenant level overrides
+# ref: https://cortexmetrics.io/docs/guides/overrides-exporter/
+tenantOverridesConfig:
+  enabled: false
+  overridesYaml:
+    overrides: {}
