--- a/templates/compactor/compactor-servicemonitor.yaml
+++ b/templates/compactor/compactor-servicemonitor.yaml
@@ -2,9 +2,9 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ include "cortex.compatorFullname" . }}
+  name: {{ include "cortex.compactorFullname" . }}
   labels:
-    {{- include "cortex.compatorLabels" . | nindent 4 }}
+    {{- include "cortex.compactorLabels" . | nindent 4 }}
     {{- if .Values.compactor.serviceMonitor.additionalLabels }}
 {{ toYaml .Values.compactor.serviceMonitor.additionalLabels | indent 4 }}
     {{- end }}
@@ -15,7 +15,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      {{- include "cortex.compatorSelectorLabels" . | nindent 6 }}
+      {{- include "cortex.compactorSelectorLabels" . | nindent 6 }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
