--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -30,13 +30,15 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.0.1
         with:
-          version: v3.3.0
+          version: v3.4.0
 
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.1.0
+        with:
+          version: v0.11.0
 
       - name: Install minio in cluster
         run: |
