--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -43,7 +43,9 @@ jobs:
       - name: Install minio in cluster
         run: |
           helm repo add minio https://helm.min.io/
+          helm repo add hashicorp https://helm.releases.hashicorp.com
           helm install --set accessKey=ssRtFvgGMdtc2b8vcPZ4 --set secretKey=3P1yXv2bnVjKx8yaLvXkcCRje0tK9rONFWRxB1gZ --set 'buckets[0].name=cortex,buckets[0].policy=none,buckets[0].purge=false' minio minio/minio
+          helm install --set server.replicas=1 --set client.enabled=false --wait consul hashicorp/consul
 
       - name: Run chart-testing (install)
         run: ct install --config ct.yaml
